--- a/TP CHARLIE Le jeux memory/style.css
+++ b/TP CHARLIE Le jeux memory/style.css
@@ -14,6 +14,7 @@ body{
 	width:336px;
 	height:720px;
 	/* background-color:  rgba(50,50,50,0.6); */
+	border: 1px;
 
 }
 .container div {
@@ -24,3 +25,4 @@ body{
 	border: 1px solid rgba(10, 10, 10, 0);
 }
 .container div:hover {opacity: 0.60}
+
