--- a/TP CHARLIE Le jeux memory/style.css
+++ b/TP CHARLIE Le jeux memory/style.css
@@ -69,3 +69,15 @@ button:active {
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 	transform: scale(1);
 }
+
+#temp {
+	background: #007BFF;
+	color: #fff;
+	font-size: 18px;
+	font-weight: bold;
+	border: none;
+	border-radius: 25px;
+	padding: 15px 30px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease;
+}
