--- a/docs/TP CHARLIE Le jeux memory/style.css
+++ b/docs/TP CHARLIE Le jeux memory/style.css
@@ -13,7 +13,6 @@ body{
 	margin-right: auto;
 	width:336px;
 	height:720px;
-	/* background-color:  rgba(50,50,50,0.6); */
 	border: 1px;
 
 }
@@ -41,4 +40,16 @@ body{
 
 .btn-back:hover {
     background-color: #45a049;
+}
+
+#temp {
+	background: #007BFF;
+	color: #fff;
+	font-size: 18px;
+	font-weight: bold;
+	border: none;
+	border-radius: 25px;
+	padding: 15px 30px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease;
 }
